--- a/src/pages/permR4.css
+++ b/src/pages/permR4.css
@@ -7,7 +7,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  max-height: 100%;
+  height: 100vh;
   font-family: LemonMilk;
   background-image: url("../assets/permR4/fond.png");
   background-size: cover;
@@ -31,7 +31,7 @@ hr{
 
 
 .ligne_depart{
-  height: 7%;
+  height: 50%;
   width: 7%;
   filter: brightness(0) invert(1);
 }
@@ -57,7 +57,7 @@ hr{
 }
 
 .arrivee{
-  height: 6%;
+  height: 50%;
   width: 6%;
   filter: brightness(0) invert(1);
 }
@@ -79,7 +79,6 @@ hr{
   margin-left: 25%;
   margin-right: 25%;
   font-size: 100px;
-  height: 10%;
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -97,13 +96,13 @@ hr{
 }
 
 .R4M{
-  height: 10%;
+  height: 90%;
   width: 10%;
   filter: brightness(0) invert(1);
 }
 
 .Raidut{
-  height: 10%;
+  height: 80%;
   width: 10%;
   filter: brightness(0) invert(1);
   opacity : 1;
