--- a/src/pages/permChef.css
+++ b/src/pages/permChef.css
@@ -1,11 +1,14 @@
 .mainContainer {
-    background-image: url('../assets/backgroundPermChef.jpg');
+    background-color: #121212;
+    display: flex;
+    justify-content: space-evenly;
 }
 
 .blurEffect {
     align-items: flex-end;
     display: flex;
     height: 100vh;
+    width: 100vw;
     justify-content: center;
     -webkit-backdrop-filter: blur(5px); /* assure la compatibilité avec safari */
     backdrop-filter: blur(5px);
