--- a/src/pages/permVDH/permVDH.css
+++ b/src/pages/permVDH/permVDH.css
@@ -1,5 +1,5 @@
 .mainContainerVDH {
-    background-image: url('../assets/permVDH.png');
+    background-image: url('../../assets/permVDH/permVDH.png');
 }
 
 .blurEffect {
