--- a/src/pages/permChef/permChef.css
+++ b/src/pages/permChef/permChef.css
@@ -1,5 +1,6 @@
 .mainContainer {
-    background-color: #121212;
+    background-image: url("../../assets/permChef/backgroundPermChef.jpg");
+    background-size: cover;
     display: flex;
     justify-content: space-evenly;
 }
@@ -13,4 +14,19 @@
     -webkit-backdrop-filter: blur(5px); /* assure la compatibilité avec safari */
     backdrop-filter: blur(5px);
     background-color: rgba(182, 182, 182, 0.2);
+}
+
+.bars {
+    align-items: flex-end;
+    display: flex;
+}
+
+.header {
+    color: white;
+    font-family: "Roboto Slab", sans-serif;
+    font-weight: bold;
+    font-size: 5em;
+    position: absolute;
+    top: 0;
+    text-shadow: 0 0 20px black;
 }
