--- a/src/pages/permPIXEL/PicFighter.css
+++ b/src/pages/permPIXEL/PicFighter.css
@@ -1,3 +1,5 @@
+
+
 .mainContainerVDH {
     background-image: url('../../assets/permVDH/permVDH.png');
 }
@@ -11,6 +13,30 @@
     background-color: rgba(182, 182, 182, 0.2);
 }
 
+.attack {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 4000px;
+    height: 200%;
+}
+
+.right {
+    position: absolute;
+    width: 140px;
+    height: 518px;
+    bottom: 1300px;
+    right : 700px;
+}
+
+.left {
+    position: absolute;
+    width: 140px;
+    height: 518px;
+    left: 60px;
+    bottom: 1300px;
+}
+
 .vdhText {
     font-size: 4rem;
     color: white;
@@ -21,4 +47,33 @@
 
 .montant {
     font-style: italic;
+}
+.beer_img {
+    opacity: 50%;
+    width: 500px;
+    display: inline-block;
+}
+
+.beer_img-selected {
+    opacity: 100%;
+    box-shadow: 0px 0px 20px rgb(255 255 255);
+    border: 5px solid yellow;
+}
+
+.beer_label {
+    display:inline-block;
+    margin: 10px;
+}
+
+.beer_wrapper {
+    width:1000px;
+}
+
+.HUD {
+    margin-left:auto;
+    margin-right:auto;
+    text-align: center;
+}
+.HUD img {
+    width: 5000px;
 }
