--- a/src/pages/permPIXEL/PicFighter.css
+++ b/src/pages/permPIXEL/PicFighter.css
@@ -12,29 +12,30 @@
     backdrop-filter: blur(3px);
     background-color: rgba(182, 182, 182, 0.2);
 }
-
-.attack {
-    display: block;
+.fight {
+    position: absolute;
     margin-left: auto;
     margin-right: auto;
-    width: 4000px;
+}
+.attack {
+    display: block;
+    width: 1000px;
     height: 200%;
+
 }
 
 .right {
     position: absolute;
-    width: 140px;
-    height: 518px;
-    bottom: 1300px;
-    right : 700px;
+    height: 51px;
+    right : 30px;
+    top:300px;
 }
 
 .left {
     position: absolute;
-    width: 140px;
-    height: 518px;
-    left: 60px;
-    bottom: 1300px;
+    height: 51px;
+    left: 30px;
+    top : 300px;
 }
 
 .vdhText {
@@ -50,7 +51,7 @@
 }
 .beer_img {
     opacity: 50%;
-    width: 500px;
+    width: 100px;
     display: inline-block;
 }
 
@@ -66,14 +67,17 @@
 }
 
 .beer_wrapper {
-    width:1000px;
+    color:white;
+    font-size:40px;
 }
 
 .HUD {
     margin-left:auto;
     margin-right:auto;
     text-align: center;
+    position:absolute;
+    top:0px;
 }
 .HUD img {
-    width: 5000px;
+    width: 1250px;
 }
