--- a/src/pages/permPIXEL/PicFighter.css
+++ b/src/pages/permPIXEL/PicFighter.css
@@ -30,14 +30,14 @@
     position: absolute;
     height: 51px;
     right : 30px;
-    top:300px;
+    top:260px;
 }
 
 .left {
     position: absolute;
     height: 51px;
     left: 30px;
-    top : 300px;
+    top : 260px;
 }
 
 .vdhText {
@@ -82,4 +82,24 @@
 }
 .HUD img {
     width: 1250px;
+}
+
+.hp-rectangle {
+    transition: .5s ease-in-out;
+}
+
+#footer {
+    width: 100vw;
+    height: 60px;
+    background-color: black;
+    color:white;
+    text-align:center;
+    position:absolute;
+    bottom:0;
+    z-index:200;
+    font-size:40px;
+}
+
+#footer p {
+    margin: 0;
 }
