--- a/src/pages/RDPA24/aviator.css
+++ b/src/pages/RDPA24/aviator.css
@@ -36,12 +36,8 @@ input[type="number"] {
   background-size: 100% 500%;
 }
 
-.game-container.running.up {
-  animation: background-up 7s linear forwards;
-}
-
-.game-container.running.down {
-  animation: background-move 7s linear forwards;
+.game-container.running {
+  animation: background-up 2s linear forwards;
 }
 
 @keyframes background-up {
@@ -50,15 +46,6 @@ input[type="number"] {
   }
   to {
     background-position: 100% 100%;
-  }
-}
-
-@keyframes background-down {
-  from {
-    background-position: var(--current-position, 0% 0%);
-  }
-  to {
-    background-position: 0% 0%;
   }
 }
 
@@ -199,24 +186,15 @@ input[type="number"] {
 }
 
 .airplane-container.running {
-  animation: airplane-shake 0.1s infinite, airplane-rotate 5s ease-out forwards;
-}
-
-@keyframes airplane-shake {
-  0%, 100% {
-    transform: translateY(-2px);
-  }
-  50% {
-    transform: translateY(2px);
-  }
+  animation: airplane-rotate 3s ease-out forwards;
 }
 
 @keyframes airplane-rotate {
-  0% {
+  0%, 100% {
     transform: rotate(0deg);
   }
-  100% {
-    transform: rotate(-30deg);
+  50% {
+    transform: rotate(-20deg);
   }
 }
 
