--- a/src/pages/RDPA24/aviator.css
+++ b/src/pages/RDPA24/aviator.css
@@ -3,6 +3,7 @@
   src: url('../../../public/font/Sabo-Filled.otf') format('truetype');
   font-weight: normal;
   font-style: normal;
+  color: white;
 }
 
 input[type="number"]::-webkit-inner-spin-button,
@@ -15,6 +16,10 @@ input[type="number"] {
   -moz-appearance: textfield;
 }
 
+body::-webkit-scrollbar {
+  display: none; 
+}
+
 .aviator-body {
   border: black solid 1px;
   height: 100vh;
@@ -22,11 +27,12 @@ input[type="number"] {
   display: flex;
   flex-direction: column;
   font-family: 'Dalek';
+  scrollbar-width: none; 
 }
 
 
 .game-container {
-  background: linear-gradient(180deg, #7cccfe  0%, #00347c 100%);
+  background: black;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -34,6 +40,7 @@ input[type="number"] {
   justify-content: space-evenly;
   gap: 2rem;
   background-size: 100% 500%;
+  overflow: hidden;
 }
 
 .game-container.running {
@@ -50,6 +57,7 @@ input[type="number"] {
 }
 
 .left-panel {
+  color: gold;
   position: absolute;
   top: 3vh;
   left: 2vw;
@@ -58,20 +66,21 @@ input[type="number"] {
   flex-direction: column;
   font-size: 2rem;
   gap: 1rem;
+  z-index: 20;
 }
 
 .left-panel .miseinput {
   height: 50px;
   width: 15rem;
   font-size: 40px;
-  background-color: #a3d3f057;
-  border: 2px solid #0b95eab0;
+  background-color: black;
+  border: 3px outset gold;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.15);
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black; 
+  color: white; 
   font-family: 'Dalek';
   text-align: center;
 }
@@ -88,7 +97,7 @@ input[type="number"] {
   left: 0;
   width: 100%; 
   height: 50%;
-  background:#228B22;
+  background: linear-gradient(0deg, #ead200  0%, #c69b00 100%);
 }
 
 .ground.running{
@@ -103,26 +112,31 @@ input[type="number"] {
 
 
 .middle-panel {
+  padding-top: 10px;
+  z-index: 10;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1rem;
 }
 
+.title {
+  width: 60%;
+}
 
 .score-display {
   width: 300px;
   height: 100px;
   font-size: 70px;
-  background-color: white;
-  border: 2px solid #ccc;
+  background-color: black;
+  border: 3px outset gold;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   display: flex;
   justify-content: center;
   align-items: center;
-  color: black; 
+  color: white; 
 }
 
 
@@ -134,29 +148,25 @@ input[type="number"] {
 
 
 .button {
-  background-color: #fff;
-  border: 0 solid #e2e8f0;
+  font-family: 'Dalek';
+  background-color: gold;
+  border: 5px outset gold;
   border-radius: 1.5rem;
   box-sizing: border-box;
-  color: #0d172a;
+  color: white;
   cursor: pointer;
   display: inline-block;
   font-size: 1.1rem;
   font-weight: 600;
   line-height: 1;
-  padding: 1rem 1.6rem;
   text-align: center;
-  text-decoration: none #0d172a solid;
-  text-decoration-thickness: auto;
   transition: all .1s cubic-bezier(.4, 0, .2, 1);
   box-shadow: 0px 1px 2px rgba(166, 175, 195, 0.25);
-  user-select: none;
-  -webkit-user-select: none;
   touch-action: manipulation;
 }
 
 .button:hover {
-  background-color: #0b95eab0;
+  background-color: rgb(255, 187, 0);
   color: #fff;
 }
 
@@ -191,7 +201,6 @@ input[type="number"] {
   }
 }
 
-
 .result {
   margin-bottom: 5rem;
   height: 60px;
@@ -201,6 +210,7 @@ input[type="number"] {
 
 
 .right-panel {
+  color: gold;
   position: absolute;
   top: 3vh;
   right: 2vw;
@@ -212,9 +222,9 @@ input[type="number"] {
 }
 
 .switch {
-  --input-focus: #2d8cf0;
-  --font-color: #323232;
-  --font-color-sub: #666;
+  --input-focus: gold;
+  --font-color: white;
+  --font-color-sub: white;
   --bg-color: #fff;
   --bg-color-alt: #666;
   --main-color: #323232;
@@ -272,3 +282,18 @@ input[type="number"] {
   transform: translateX(30px);
 }
 
+.bill {
+  position: absolute;
+  width: auto;
+  animation: defilement 2s linear;
+  z-index: 0;
+}
+
+@keyframes defilement {
+  from {
+    transform: translateX(200px) rotate(500deg);
+  }
+  to {
+    transform: translateX(-200vh) rotate(0deg);
+  }
+}
